deployment-portfolio.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portfolio-website
  labels:
    app: portfolio-website
spec:
  replicas: 2
  selector:
    matchLabels:
      app: portfolio-website
  template:
    metadata:
      labels:
        app: portfolio-website
    spec:
      containers:
        - name: portfolio-website
          image: 'asia-south1-docker.pkg.dev/testing-bharani/personal-portfolio-website/portfolio-website:20'
          ports:
            - containerPort: 80
