cluster-ip-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: portfolio-website-svc
spec:
  type: ClusterIP
  selector:
    app: portfolio-website
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
